test/programs/good/typechecker/bit_2.lq
initQubit :: !(() -> Qbit)
initQubit _ = new @0

initBit :: !(() -> Bit)
initBit _ = 0b0

main :: Qbit * Bit
main = (initQubit (), initBit ())
