test/programs/bad/typechecker/bit_3.lq
initQubit :: !(() -> Qbit)
initQubit _ = new @0

initBit :: !(() -> Bit)
initBit _ = 0b0

main :: Bit * Qbit
main = (initQubit (), initBit ())
